--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ eframe = "=0.33.2"
 egui = "0.33.2"
 egui_extras = "0.33.2"
 chrono = "=0.4.42"
+dirs = "6.0.0"
+serde = "1.0.228"
+serde_json = "1.0.145"
